# Left-Atrium-Model-Experimental

./: .gitignore  CMakeLists.txt  README.md  cmakebuildinstructions.txt  compile.ps1  run  run.ps1
MakeNodesAndMuscleFiles/: makeNodesAndMusclesFile.cu
Source/: callBackFunctions.h  header.h
scripts/: package.ps1
